--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -8,7 +8,7 @@
   margin: 0px;
   padding: 12px 34px;
   width: 420px;
-  height: calc(100vh -24px);
+  height: calc(100vh - 24px);
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -39,7 +39,7 @@
   line-height: 18px;
 }
 .project__title {
-  margin: 60px 0px 8px 0px;
+  margin: 40px 0px 8px 0px;
   color: var(--main-black-color);
   font-style: normal;
   font-weight: 900;
@@ -232,3 +232,61 @@
   display: flex;
   flex-direction: column;
 }
+
+@media all and (max-width: 833px) {
+  .project {
+    height: auto;
+  }
+  .project__form {
+    margin: 12px;
+    padding: 12px 20px;
+    width: calc(100% - 24px);
+    height: auto;
+  }
+  .project__logo {
+    height: 40px;
+  }
+  .project__form-title {
+    margin: 12px 0px 0px 0px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .project__form-text {
+    margin: 8px 0px 0px 0px;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .project__title {
+    margin: 12px 0px 0px 0px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+  .project__member-btn {
+    margin: 8px 0px 0px 0px;
+    width: max-content;
+    background: var(--gradient-blue-color);
+    border: none;
+    border-radius: var(--border-radius);
+    color: var(--main-white-color);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 14px;
+    padding: 6px 12px;
+    transition: all .3s ease-in-out;
+  }
+  .project-list {
+    width: 100%;
+    height: auto;
+    margin: 12px 0px 0px 0px;
+    padding: 0px 12px 0px 12px;
+    box-sizing: border-box;
+    list-style-type: none;
+    display: grid;
+    gap: 12px;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+    grid-auto-rows: auto;
+    overflow-y: auto;
+  }
+}
+
